<resources>
    <string name="app_name">共享停车位</string>
    <string name="map_common">普通地图</string>
    <string name="map_site">卫星地图</string>

    <string name="reserve">预定车位</string>
    <string name="nickname">nickname</string>
    <string name="parklotname">parklotname</string>

    <!-- 菜单内容项 -->
    <string name="map_traffic">开启实时交通</string>
    <string name="map_myaddress">我的位置</string>
    <string name="mode_common">普通模式</string>
    <string name="mode_following">跟随模式</string>
    <string name="mode_compass">罗盘模式</string>
    <string name="add_overlay">添加覆盖物</string>
    <string name="search_bydistance">按距离查找</string>
    <string name="search_bytime">按时间查找</string>
    <string name="search_bynoparknum">按停车数查找</string>
    <string name="recharge">充值</string>
    <string name="testusername">测试用户名</string>
    <string name="bindplatenum">绑定车牌</string>
    <string name="evaluate">评价</string>


    <string name="errcode_ok">0</string>
    <string name="errcode_cancel">-2</string>
    <string name="errcode_deny">-4</string>
    <string name="errcode_unsupported">-5</string>
    <string name="errcode_unknown">-6</string>
    <string name="errcode_sentfailed">-3</string>
    <string name="errcode_comm">-1</string>

</resources>
