<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/id_map_common"
        app:showAsAction="never"
        android:title="@string/map_common"/>

    <item
        android:id="@+id/id_map_site"
        app:showAsAction="never"
        android:title="@string/map_site"/>

    <item
        android:id="@+id/id_map_traffic"
        app:showAsAction="never"
        android:title="@string/map_traffic"/>

    <item
        android:id="@+id/id_map_location"
        app:showAsAction="never"
        android:title="@string/map_myaddress"/>

    <item
        android:id="@+id/id_map_mode_common"
        app:showAsAction="never"
        android:title="@string/mode_common"/>

    <item
        android:id="@+id/id_map_mode_following"
        app:showAsAction="never"
        android:title="@string/mode_following"/>

    <item
        android:id="@+id/id_map_mode_compass"
        app:showAsAction="never"
        android:title="@string/mode_compass"/>

    <item
        android:id="@+id/id_add_overlay"
        app:showAsAction="never"
        android:title="@string/add_overlay"/>

</menu>